<?xml version="1.0"?>
<package>
  <name>startup</name>
  <version>0.0.0</version>
  <description>The startup package</description>
  <maintainer email="randoms@bwbot.org">randoms</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>